// =========================================================================
// 📐 CONCEPTUAL ERD — ĐẦY ĐỦ NGHIỆP VỤ (FULL BUSINESS DOMAIN)
// Dự Án: Hệ Thống Bán Nông Sản Sạch (Fruit Shop Online)
//
// 11 THỰC THỂ (5 Strong + 6 Weak)
//   Strong: users, categories, products, promotions, orders
//   Weak:   shop_owner_profiles, product_variants, payment_transactions,
//           deliveries, reviews, chat_sessions
//
// Ẩn hoàn toàn (Junction / Technical Tables):
//   order_items, order_promotions, shop_settlement_orders,
//   cart, cart_items, product_images, inventory_logs,
//   user_sessions, sepay_webhook_dedup, notifications, chat_messages
//
// Nguồn xác minh: database/Schema.sql (FK thực tế)
// =========================================================================

// =========================================================================
// 1. NGƯỜI DÙNG [STRONG — BLUE #175e7a]
// Thực thể trung tâm: mọi actor đều là User
// =========================================================================
Table users [headercolor: #175e7a] {
  user_id integer [pk, increment, not null, note: 'Định danh người dùng duy nhất']
  full_name nvarchar [not null, note: 'Họ tên đầy đủ']
  email nvarchar [unique, not null, note: 'Email đăng nhập (duy nhất toàn hệ thống)']
  password_hash nvarchar [note: 'Mật khẩu đã mã hóa BCrypt']
  phone nvarchar [note: 'Số điện thoại liên lạc']
  role nvarchar [not null, note: 'Phân quyền: CUSTOMER | SHOP_OWNER | DELIVERY | ADMIN']
  status nvarchar [not null, note: 'Trạng thái: ACTIVE | INACTIVE']
  user_address nvarchar [note: 'Địa chỉ mặc định']
}

// =========================================================================
// 2. HỒ SƠ GIAN HÀNG [WEAK of User — BLUE #1565c0]
// =========================================================================
Table shop_owner_profiles [headercolor: #1565c0] {
  profile_id integer [pk, increment, not null, note: 'Định danh hồ sơ gian hàng']
  user_id integer [unique, not null, note: 'FK → users.user_id (1:1 — mỗi user chỉ có 1 shop)']
  shop_name nvarchar [not null, note: 'Tên thương hiệu cửa hàng nông sản']
  shop_description nvarchar [note: 'Mô tả cửa hàng, thế mạnh nông sản']
  approval_status nvarchar [not null, note: 'Luồng duyệt: PENDING | APPROVED | REJECTED | SUSPENDED']
  delivery_address nvarchar [note: 'Địa chỉ kho hàng / điểm lấy hàng']
  rating decimal [not null, note: 'Điểm đánh giá TB (dẫn xuất từ đơn hàng đã giao)']
}

// =========================================================================
// 3. DANH MỤC NÔNG SẢN [STRONG — GREEN #2e7d32]
// =========================================================================
Table categories [headercolor: #2e7d32] {
  category_id integer [pk, increment, not null, note: 'Định danh danh mục hoa quả']
  name nvarchar [unique, not null, note: 'Tên danh mục (Trái cây nội địa, Nhập khẩu...)']
  slug nvarchar [unique, not null, note: 'URL-friendly slug cho SEO']
  display_order integer [not null, note: 'Thứ tự hiển thị trên UI']
  is_active bit [not null, note: 'Trạng thái: 1=Hiển thị | 0=Ẩn']
}

// =========================================================================
// 4. SẢN PHẨM NÔNG SẢN [STRONG — GREEN #2e7d32]
// =========================================================================
Table products [headercolor: #2e7d32] {
  product_id integer [pk, increment, not null, note: 'Định danh sản phẩm']
  owner_id integer [not null, note: 'FK → users.user_id (Chủ shop đăng bán)']
  category_id integer [not null, note: 'FK → categories.category_id']
  name nvarchar [not null, note: 'Tên sản phẩm hoa quả']
  description nvarchar [note: 'Mô tả chi tiết nguồn gốc và đặc tính']
  origin_country nvarchar [note: 'Quốc gia xuất xứ (Việt Nam, Úc, Mỹ...)']
  harvest_date date [note: 'Ngày thu hoạch thực tế']
  shelf_life_days integer [note: 'Hạn bảo quản tối đa (ngày)']
  status nvarchar [not null, note: 'Trạng thái: ACTIVE | INACTIVE']
  rating decimal [note: 'Điểm đánh giá TB (dẫn xuất từ reviews)']
  sold_quantity integer [note: 'Tổng đã bán (dẫn xuất từ order_items)']
}

// =========================================================================
// 5. BIẾN THỂ SẢN PHẨM [WEAK of Product — GREEN #388e3c]
// order_items.variant_id → product_variants (không phải products)
// =========================================================================
Table product_variants [headercolor: #388e3c] {
  variant_id integer [pk, increment, not null, note: 'Định danh biến thể đóng gói']
  product_id integer [not null, note: 'FK → products.product_id (CASCADE DELETE)']
  sku nvarchar [unique, not null, note: 'Mã kho duy nhất (Barcode / SKU)']
  variant_label nvarchar [not null, note: 'Quy cách đóng gói (Hộp 1kg, Thùng 10kg...)']
  price decimal [not null, note: 'Đơn giá bán lẻ (VND)']
  stock_quantity integer [not null, note: 'Số lượng tồn kho thực tế']
  is_active bit [not null, note: 'Trạng thái: 1=Đang bán | 0=Hết hàng / Ẩn']
}

// =========================================================================
// 6. MÃ KHUYẾN MÃI [STRONG — RED #c62828]
// =========================================================================
Table promotions [headercolor: #c62828] {
  promo_id integer [pk, increment, not null, note: 'Định danh mã voucher']
  code nvarchar [unique, not null, note: 'Mã Code giảm giá nhập tay']
  discount_type nvarchar [not null, note: 'Loại: PERCENT | FIXED']
  discount_value decimal [not null, note: 'Giá trị chiết khấu']
  min_order_value decimal [not null, note: 'Đơn hàng tối thiểu để áp dụng']
  valid_from datetime [not null, note: 'Thời điểm bắt đầu hiệu lực']
  valid_until datetime [not null, note: 'Thời điểm hết hiệu lực']
  is_active bit [not null, note: 'Trạng thái: 1=Hoạt động | 0=Tắt']
}

// =========================================================================
// 7. ĐƠN HÀNG [STRONG — RED #c62828]
// =========================================================================
Table orders [headercolor: #c62828] {
  order_id integer [pk, increment, not null, note: 'Định danh đơn hàng']
  customer_id integer [not null, note: 'FK → users.user_id (Khách hàng mua)']
  owner_id integer [not null, note: 'FK → users.user_id (Chủ shop bán)']
  delivery_address nvarchar [not null, note: 'Địa chỉ nhận hàng']
  status nvarchar [not null, note: 'Vòng đời: PENDING_PAYMENT | CONFIRMED | PREPARING | DISPATCHED | DELIVERED | CANCELLED']
  total_amount decimal [not null, note: 'Tổng tiền sản phẩm trước giảm giá']
  discount_amount decimal [not null, note: 'Tổng giảm giá áp dụng']
  delivery_fee decimal [not null, note: 'Phí vận chuyển']
  final_amount decimal [not null, note: 'Số tiền thực thanh toán (= total + fee - discount)']
  payment_method nvarchar [not null, note: 'Phương thức: CK (chuyển khoản) | COD']
}

// =========================================================================
// 8. GIAO DỊCH THANH TOÁN [WEAK of Order — ORANGE #ef6c00]
// =========================================================================
Table payment_transactions [headercolor: #ef6c00] {
  transaction_id integer [pk, increment, not null, note: 'Định danh giao dịch thanh toán']
  order_id integer [unique, not null, note: 'FK → orders.order_id (1:1 — mỗi đơn 1 giao dịch)']
  payment_method nvarchar [not null, note: 'Kênh: SEPAY (QR ngân hàng) | COD']
  amount decimal [not null, note: 'Số tiền (khớp với orders.final_amount)']
  currency nvarchar [not null, note: 'Đơn vị tiền tệ (mặc định: VND)']
  status nvarchar [not null, note: 'Trạng thái: pending | processing | completed | failed | refunded | expired']
  initiated_at datetime [not null, note: 'Thời điểm khởi tạo QR / giao dịch']
  completed_at datetime [note: 'Thời điểm xác nhận thanh toán thành công']
  expires_at datetime [note: 'Hết hạn quét QR (thường 15 phút)']
}

// =========================================================================
// 9. LỘ TRÌNH GIAO HÀNG [WEAK of Order — ORANGE #f57c00]
// =========================================================================
Table deliveries [headercolor: #f57c00] {
  delivery_id integer [pk, increment, not null, note: 'Định danh lộ trình giao hàng']
  order_id integer [unique, not null, note: 'FK → orders.order_id (1:1 — mỗi đơn 1 tài xế)']
  staff_id integer [note: 'FK → users.user_id (Tài xế được phân công, NULL nếu chưa gán)']
  status nvarchar [not null, note: 'Trạng thái: ASSIGNED | PICKED_UP | IN_TRANSIT | DELIVERED | FAILED']
  picked_up_at datetime [note: 'Thời điểm tài xế lấy hàng tại kho']
  delivered_at datetime [note: 'Thời điểm giao hàng thành công']
  failure_reason nvarchar [note: 'Lý do thất bại nếu giao không thành công']
}

// =========================================================================
// 10. ĐÁNH GIÁ SẢN PHẨM [WEAK of Order + User — PURPLE #6a1b9a]
// Trong schema vật lý: reviews.order_item_id → order_items (hidden junction)
// Ở ERD khái niệm: đơn giản hóa thành reviews gắn với Order + Customer
// =========================================================================
Table reviews [headercolor: #6a1b9a] {
  review_id integer [pk, increment, not null, note: 'Định danh đánh giá']
  order_id integer [not null, note: 'Conceptual FK → orders.order_id (đơn hàng đã hoàn thành)']
  shop_id integer [not null, note: 'Conceptual FK → shop_owner_profiles.profile_id (gian hàng được đánh giá — dẫn xuất từ orders.owner_id → users → shop_owner_profiles)']
  customer_id integer [not null, note: 'FK → users.user_id (Khách hàng viết đánh giá)']
  rating tinyint [not null, note: 'Điểm sao: 1 (Rất tệ) đến 5 (Xuất sắc)']
  review_text nvarchar [note: 'Nội dung phản hồi chi tiết của khách hàng']
  is_hidden bit [not null, note: 'Cờ kiểm duyệt: 0=Hiển thị | 1=Ẩn bởi Admin']
}

// =========================================================================
// 11. PHIÊN CHAT HỖ TRỢ [WEAK of User×2 — PURPLE #7b1fa2]
// Đóng gói: chat_messages là thuộc tính ẩn của chat_sessions
// =========================================================================
Table chat_sessions [headercolor: #7b1fa2] {
  session_id integer [pk, increment, not null, note: 'Định danh phiên chat']
  customer_id integer [not null, note: 'FK → users.user_id (Khách hàng khởi tạo hội thoại)']
  owner_id integer [not null, note: 'FK → users.user_id (Chủ shop tham gia hội thoại)']
  status nvarchar [not null, note: 'Trạng thái: ACTIVE | CLOSED']
  created_at datetime [not null, note: 'Thời điểm mở phiên chat']
  closed_at datetime [note: 'Thời điểm đóng phiên chat']
}

// =========================================================================
// 📐 QUAN HỆ KHÁI NIỆM — 13 MỐI QUAN HỆ CÓ TÊN
// Tất cả FK khớp 100% với database/Schema.sql
// =========================================================================

// ── [1] Phân hệ Gian Hàng ─────────────────────────────────────────────
// Mỗi User (SHOP_OWNER) sở hữu duy nhất 1 hồ sơ gian hàng (1:1)
Ref owns: users.user_id - shop_owner_profiles.user_id

// ── [2-3] Phân hệ Sản Phẩm ────────────────────────────────────────────
// Một User (SHOP_OWNER) đăng bán nhiều sản phẩm (1:N)
Ref sells: users.user_id < products.owner_id

// Một danh mục chứa nhiều sản phẩm hoa quả (1:N)
Ref categorizes: categories.category_id < products.category_id

// ── [4] Phân hệ Biến Thể ──────────────────────────────────────────────
// Một sản phẩm có nhiều biến thể đóng gói (1:N) — Weak Entity
Ref has_variants: products.product_id < product_variants.product_id

// ── [5-6] Phân hệ Đơn Hàng ────────────────────────────────────────────
// Một User (CUSTOMER) đặt nhiều đơn hàng (1:N)
Ref places: users.user_id < orders.customer_id

// Một User (SHOP_OWNER) nhận nhiều đơn hàng (1:N)
Ref receives: users.user_id < orders.owner_id

// ── [7] Chi Tiết Đơn — N:M ẩn bảng trung gian order_items ────────────
// Đơn hàng chứa nhiều biến thể; biến thể nằm trong nhiều đơn
Ref contains: orders.order_id <> product_variants.variant_id

// ── [8] Khuyến Mãi — N:M ẩn bảng trung gian order_promotions ─────────
// Đơn hàng áp dụng mã giảm giá; mã dùng cho nhiều đơn
Ref applies: orders.order_id <> promotions.promo_id

// ── [9] Thanh Toán (1:1) ──────────────────────────────────────────────
// Mỗi đơn hàng có tối đa 1 giao dịch thanh toán active
Ref paid_via: orders.order_id - payment_transactions.order_id

// ── [10] Giao Hàng (1:1) ──────────────────────────────────────────────
// Mỗi đơn hàng có tối đa 1 lộ trình giao hàng
Ref dispatched_via: orders.order_id - deliveries.order_id

// Tài xế (Delivery Staff) được phân công giao nhiều đơn (1:N)
Ref delivered_by: users.user_id < deliveries.staff_id

// ── [11-12] Đánh Giá ──────────────────────────────────────────────────
// Một đơn hàng hoàn thành có thể có nhiều đánh giá (1:N — theo từng item)
Ref reviewed_in: orders.order_id < reviews.order_id

// Một khách hàng viết nhiều đánh giá (1:N)
Ref writes: users.user_id < reviews.customer_id

// Một gian hàng nhận nhiều đánh giá từ khách hàng sau khi giao hàng (1:N)
// [Conceptual] Dẫn xuất từ orders.owner_id → users → shop_owner_profiles
Ref rated_shop: shop_owner_profiles.profile_id < reviews.shop_id

// ── [13] Chat Hỗ Trợ ──────────────────────────────────────────────────
// Một User (CUSTOMER) khởi tạo nhiều phiên chat (1:N)
Ref initiates: users.user_id < chat_sessions.customer_id

// Một User (SHOP_OWNER) tham gia nhiều phiên chat (1:N)
Ref hosts: users.user_id < chat_sessions.owner_id
